--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "name": "plateau/automaton",
-    "description": "",
+    "description": "Task Scheduler for Laravel 4.x",
+    "license": "MIT",
     "authors": [
-        {
-            "name": "Plateau Creations",
-            "email": "codextends@gmail.com"
-        }
+    {
+        "name": "Plateau Creations",
+        "email": "codextends@gmail.com"
+    }
     ],
     "require": {
         "php": ">=5.3.0",
